<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/layout_Question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/textView_Question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_1_what_is_the_name_of_the_strongest_piece_in_chess" />

            <EditText
                android:id="@+id/editText_Question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:hint="@string/king_queen_rook_bishop_knight_or_pawn"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Question_23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_Question_1"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:id="@+id/layout_Question_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Question_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/_2_how_many_fields_are_on_the_board" />

                <RadioGroup
                    android:id="@+id/radio_Group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_Button_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/_32"/>

                    <RadioButton
                        android:id="@+id/radio_Button_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/_64"/>

                    <RadioButton
                        android:id="@+id/radio_Button_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/_16"/>

                    <RadioButton
                        android:id="@+id/radio_Button_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/_256"/>
                </RadioGroup>
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/layout_Question_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Question_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/_3_what_can_be_the_result_of_the_game" />

                <CheckBox
                    android:id="@+id/checkBox_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/_1_0_white_wins" />

                <CheckBox
                    android:id="@+id/checkBox_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/_0_1_black_wins" />

                <CheckBox
                    android:id="@+id/checkBox_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/_0_5_0_5_draw" />

                <CheckBox
                    android:id="@+id/checkBox_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/_0_0_no_one_wins" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/layout_Question_23"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/textView_Question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_4_what_should_white_move_to_achieve_draw" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/question4"/>

            <EditText
                android:id="@+id/editText_Question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:hint="@string/enter_the_first_move_only"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_Question_4"
            android:text="@string/grading"
            android:onClick="grading"
            android:layout_centerInParent="true"
            android:layout_marginBottom="16dp"/>
    </RelativeLayout>
</ScrollView>